# just-a-demo

./: .gitignore  demo.ipynb  deploy.py  main.py  pyproject.toml  questions.txt  support.py
analyzers/: chatgpt.py  spacy.py
fine-tuning/replicated/: training.jsonl  training_prepared.jsonl
fine-tuning/troubleshoot/: check.py  data.yaml  training.jsonl  training_prepared.jsonl  yamlToString.py
generators/: preflight.py  support_bundle.py
templates/: support_bundle.py
utils/: tools.py
